--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -4,48 +4,44 @@
     android:id="@+id/activity_auth"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#EEE"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.mentormate.hackblagoevgradtwitter.AuthActivity">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:ems="10"
-        android:layout_marginTop="170dp"
         android:id="@+id/edt_email"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/edt_password"
+        android:hint="Email"
+        android:inputType="textEmailAddress" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:id="@+id/edt_password"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:layout_below="@+id/edt_email"
-        android:layout_alignRight="@+id/edt_email"
-        android:layout_alignEnd="@+id/edt_email"
-        android:layout_marginTop="28dp"
-        android:id="@+id/edt_password" />
+        android:layout_centerInParent="true"
+        android:layout_marginTop="16dp"
+        android:hint="Password"
+        android:inputType="textPassword" />
 
     <Button
-        android:text="Login"
+        android:id="@+id/btn_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/edt_password"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="47dp"
-        android:id="@+id/btn_login" />
+        android:text="Login" />
 
     <Button
-        android:text="Register"
+        android:id="@+id/btn_reg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_reg"
-        android:layout_below="@+id/btn_login"
         android:layout_alignLeft="@+id/btn_login"
-        android:layout_alignStart="@+id/btn_login" />
+        android:layout_alignStart="@+id/btn_login"
+        android:layout_below="@+id/btn_login"
+        android:text="Register" />
 </RelativeLayout>
