--- a/app/src/main/res/layout/activity_tweet_photo.xml
+++ b/app/src/main/res/layout/activity_tweet_photo.xml
@@ -7,16 +7,15 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.mentormate.hackblagoevgradtwitter.TweetPhotoActivity">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <EditText
         android:id="@+id/edt_tweet_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxLines="1"
         android:gravity="top"
-        android:hint="Write post" />
+        android:hint="Write post"
+        android:maxLines="1" />
 
     <ImageView
         android:id="@+id/img_tweet"
@@ -27,10 +26,10 @@
 
     <ProgressBar
         android:id="@+id/progress_bar"
-        android:visibility="invisible"
-        android:layout_centerInParent="true"
         android:layout_width="64dp"
-        android:layout_height="64dp" />
+        android:layout_height="64dp"
+        android:layout_centerInParent="true"
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/btn_upload"
