--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:id="@+id/edt_tweet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="Enter tweet"
         android:layout_above="@+id/grp_tweet" />
 
     <LinearLayout
